# ludo-sql

./: .gitignore  .pdm.toml  makepages.sh  pyproject.toml
alembic/: env.py
ludo/: auth.py  db.py  main.py  utils.py
ludo/assets/: models.py  routes.py  services.py
ludo/pages/: models.py  routes.py
webui/: package.json  pnpm-lock.yaml  tailwind.config.cjs
webui/src/lib/components/: AssetViewer.svelte  ContextMenu.svelte  ContextMenuContent.svelte  Dialog.svelte  Menu.svelte  MenuOption.svelte  PageEditor.svelte  PageTree.svelte  SplitPane.svelte  menu.ts
webui/src/lib/store/: assets.ts  auth.ts  clipboard.ts  page.ts  settings.ts
webui/src/routes/: +layout.svelte  +page.svelte  Navbar.svelte  Sidebar.svelte  app.css
webui/src/routes/assets/[id]/: +page.svelte
webui/src/routes/login/: +page.svelte
webui/src/routes/pages/: +page.svelte
webui/src/routes/pages/[id]/: +page.svelte  +page.ts
webui/src/routes/pages/[id]/edit/: +page.svelte  +page.ts
webui/src/routes/pages/new/: +page.svelte
webui/src/routes/settings/: +page.svelte
